# system_mpi

./: CMakeLists.txt  Config.cmake.in  README.md  system_mpi.md.in
cmake/modules/: UseMPI.cmake
src/: CMakeLists.txt  mpi_types.h  system_mpi.F90
